# emperor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
related_work/dtextract/: COPYRIGHT  README.md  pyproject.toml  setup.py
related_work/dtextract/dtextract/core/: __init__.py  dt.py  learn.py
related_work/dtextract/dtextract/data/: __init__.py  consts.py  data.py
related_work/dtextract/dtextract/examples/: auto_mpg.py  breast_cancer_diag.py  car.py  car_loan.py  dermatology.py  diabetes.py  fertility.py  iris.py  post_operative.py  prostate.py  runCompare.py  runCsv.py  student.py  wine.py
related_work/dtextract/dtextract/impl/: __init__.py  base.py  dists.py  funcs.py  simp.py
related_work/dtextract/dtextract/util/: __init__.py  log.py  util.py
related_work/dtextract/use_cases/heartbleed_case/: CIC-IDS-2017_OverSampled_min.csv.zip_dtExtract.gv  run.py
related_work/dtextract/use_cases/vpn_case/: deeptraffic.py  dtExtract.gv  run.py
related_work/trepan/: README.md  pyproject.toml  setup.py
related_work/trepan/trepan/: trepan.py
related_work/trepan/use_cases/heartbleed_case/: const.py  dataset.py  run.py  trepan.gv
related_work/trepan/use_cases/vpn_case/: deeptraffic.py  run.py  trepan.gv
use_cases/heartbleed_case/: Dockerfile  Makefile  README.md  ablation.py  main.py  pyproject.toml  requirements.txt  validation.py
use_cases/heartbleed_case/res/dataset/: subsample.py
use_cases/heartbleed_case/res/dataset/validation/: .gitignore  heartbleed.csv
use_cases/heartbleed_case/res/output/report/: trust_report.txt  trust_report_dt
use_cases/kitsune_case/: Dockerfile  FeatureExtractor.py  Kitsune.py  Makefile  README.md  example.py  main.py  pyproject.toml  requirements.txt  validation.py
use_cases/kitsune_case/KitNET/: KitNET.py  corClust.py  dA.py
use_cases/kitsune_case/res/dataset/: plot.py  tamper.py
use_cases/kitsune_case/res/output/: plot.py
use_cases/kitsune_case/res/output/report/: trust_report.txt
use_cases/moon_star_case/: Dockerfile  Makefile  README.md  ablation.py  main.py  pyproject.toml  requirements.txt  run_shap.py
use_cases/moon_star_case/res/output/report/: trust_report.txt  trust_report_pruned_dt
use_cases/nprint_ids_case/: Dockerfile  Makefile  README.md  ablation.py  main.py  pyproject.toml  requirements.txt  tcpoptions-only.py  validation.py
use_cases/nprint_ids_case/res/: run-nprint-campus-tcpoptions.sh  run-nprint.sh
use_cases/nprint_ids_case/res/campus_dataset/: README.md  labels.txt
use_cases/nprint_ids_case/res/nprint_tcp_options_dataset/: sub_labels.txt  subsample.py
use_cases/nprint_ids_case/res/output/full_model/report/: trust_report.txt  trust_report_dt
use_cases/nprint_ids_case/res/output/tcpoptions_only_model/report/: trust_report_dt
use_cases/nprint_os_case/: .dockerignore  Dockerfile  Makefile  README.md  ablation.py  main.py  pyproject.toml
use_cases/nprint_os_case/res/dataset/: README.md  labels.txt  run-nprint.sh
use_cases/nprint_os_case/res/dataset/nprintml/: meta.toml
use_cases/nprint_os_case/res/dataset/nprintml/feature/: features.fhr
use_cases/nprint_os_case/res/dataset/nprintml/model/: learner.pkl
use_cases/nprint_os_case/res/dataset/nprintml/model/models/: trainer.pkl
use_cases/nprint_os_case/res/dataset/nprintml/model/models/LightGBM/: model.pkl
use_cases/nprint_os_case/res/dataset/nprintml/model/models/LightGBMXT/: model.pkl
use_cases/nprint_os_case/res/dataset/old/: labels-100.txt
use_cases/nprint_os_case/res/dataset/scripts/: Makefile  dataset_info  dataset_info.py  gen_labels  split_pcaps_by_ip.py
use_cases/nprint_os_case/res/output/report/: trust_report.txt  trust_report_dt
use_cases/pensieve_case/: README.md  Vagrantfile  pyproject.toml  requirements.txt
use_cases/pensieve_case/dash.js/: Gruntfile.js  package-lock.json
use_cases/pensieve_case/dash.js/src/streaming/controllers/: EmperorController.js  ViperDecisionTree.js
use_cases/pensieve_case/metis/: ablation.py  main.py  rl.py
use_cases/pensieve_case/metis/output/: maTrusteeDt.js  metisDt.js
use_cases/pensieve_case/metis/output/report/: trust_report.txt
use_cases/pensieve_case/run_exp/: chrome_retry_log  load_results.py  plot_results.py  run_traces.py
use_cases/pensieve_case/run_exp/results/: log_BB_1000kbps  log_BB_1100kbps  log_BB_1150kbps  log_BB_1300kbps  log_BB_1450kbps  log_BB_1500kbps  log_BB_1550kbps  log_BB_1600kbps  log_BB_1650kbps  log_BB_1700kbps  log_BB_1750kbps  log_BB_1800kbps  log_BB_1850kbps  log_BB_1900kbps  log_BB_2000kbps  log_BB_2050kbps  log_BB_2100kbps  log_BB_2150kbps  log_BB_2200kbps  log_BB_2450kbps  log_BB_2500kbps  log_BB_2700kbps  log_BB_2800kbps  log_BB_2850kbps  log_BB_3000kbps  log_BB_3050kbps  log_BB_3150kbps  log_BB_3350kbps  log_BB_3450kbps  log_BB_3500kbps  log_BB_350kbps  log_BB_3550kbps  log_BB_3600kbps  log_BB_3650kbps  log_BB_3750kbps  log_BB_3900kbps  log_BB_400kbps  log_BB_4050kbps  log_BB_4100kbps  log_BB_4250kbps  (+202 more)
use_cases/pensieve_case/video_server/: dash.all.debug.js.map  dash.all.min.js  dash.all.min.js.map  dash.mediaplayer.debug.js.map  dash.mediaplayer.min.js.map  dash.protection.debug.js  dash.protection.debug.js.map  dash.reporting.debug.js  index_BB.html  index_BOLA.html  index_RB.html  index_emperor.html  index_fixed.html  index_metis.html  index_pensieve.html  index_pensieve_5_layers.html
use_cases/vpn_case/: .dockerignore  Dockerfile  Makefile  README.md  ablation.py  input_data.py  main.py  pyproject.toml  requirements.txt  run_shap.py  validation.py
use_cases/vpn_case/res/output/report/: trust_report.txt  trust_report_dt  trust_report_pruned_dt
viper_case/: README.md  emperor_main.py  pyproject.toml  requirements.txt
viper_case/viper/python/viper/core/: rl.py
vpn_case/: deeptraffic.py  main.py  pyproject.toml  run_shap.py  strawman.py
vpn_case/res/output/: trust_report.txt  trust_report_dt
vpn_case/res/output/report/: trust_report.txt  trust_report_dt
vpn_case/res/output/report/prunning/: ccp_dt_0_9  ccp_dt_1_7  ccp_dt_2_7  ccp_dt_3_7  ccp_dt_4_7  ccp_dt_5_7  ccp_dt_6_3  ccp_dt_7_3  ccp_dt_8_3  ccp_dt_9_3
(+644 files in other folders)
