[tool.poetry]
name = "emperor"
version = "0.1.0"
description = "This package contains reproducibility artificats for the paper 'AI/ML and Cybersecurity: The Emperor has no Clothes'"
authors = ["Anonymous user <anon4papers@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
scikit-learn = "^0.23.2"
scikit-explain = {git = "https://github.com/asjacobs92/scikit-explain.git"}
tensorflow = "^2.3.1"
ipython = "^7.18.1"
jupyter = "^1.0.0"
nprintml = "^1.0.3"
pcap-splitter = "^1.0.0"
nest-asyncio = "^1.5.1"
mxnet = "^1.8.0"
lightgbm = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
