[tool.poetry]
name = "viper_case"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.7"
absl-py = "1.0.0"
astor = "0.8.1"
atari-py = "0.2.6"
attrs = "21.4.0"
autocfg = "0.0.8"
autogluon = "0.3.1"
autogluon-contrib-nlp = "0.0.1b20210201"
"autogluon.core" = "0.3.1"
"autogluon.extra" = "0.3.1"
"autogluon.features" = "0.3.1"
"autogluon.mxnet" = "0.3.1"
"autogluon.tabular" = "0.3.1"
"autogluon.text" = "0.3.1"
"autogluon.vision" = "0.3.1"
autograd = "1.3"
AutoROM = "0.4.2"
"AutoROM.accept-rom-license" = "0.4.2"
bcrypt = "3.2.0"
blessings = "1.7"
blis = "0.7.6"
boto3 = "1.21.13"
botocore = "1.24.13"
cached-property = "1.5.2"
catalogue = "2.0.6"
catboost = "0.25.1"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
click = "8.0.4"
cloudpickle = "1.6.0"
codecov = "2.1.12"
colorama = "0.4.4"
coloredlogs = "15.0.1"
colour-runner = "0.1.1"
ConfigSpace = "0.4.19"
contextvars = "2.4"
coverage = "6.3.2"
cryptography = "36.0.1"
cycler = "0.11.0"
cymem = "2.0.6"
Cython = "0.29.28"
d8 = "0.0.2.post0"
dask = "2022.2.0"
deepdiff = "5.7.0"
dill = "0.3.4"
distlib = "0.3.4"
distributed = "2022.2.0"
fastai = "2.5.3"
fastcore = "1.3.29"
fastdownload = "0.0.5"
fastprogress = "1.0.2"
filelock = "3.6.0"
flake8 = "2.3.0"
fonttools = "4.29.1"
fsspec = "2022.2.0"
future = "0.18.2"
gast = "0.5.3"
gluoncv = "0.10.4.post4"
graphviz = "0.19.1"
grpcio = "1.44.0"
gym = "0.12.0"
gym-notices = "0.0.4"
h5py = "3.6.0"
HeapDict = "1.0.1"
humanfriendly = "10.0"
idna = "3.3"
imbalanced-learn = "0.8.1"
imblearn = "0.0"
immutables = "0.16"
importlib-metadata = "4.11.2"
importlib-resources = "5.4.0"
iniconfig = "1.1.1"
Jinja2 = "3.0.3"
jmespath = "0.10.0"
joblib = "1.1.0"
kaggle = "1.5.12"
Keras-Applications = "1.0.8"
Keras-Preprocessing = "1.1.2"
kiwisolver = "1.3.2"
langcodes = "3.3.0"
liac-arff = "2.5.0"
lightgbm = "3.3.2"
locket = "0.2.1"
Markdown = "3.3.6"
MarkupSafe = "2.1.0"
matplotlib = "3.5.1"
mccabe = "0.6.1"
minio = "7.1.4"
mock = "4.0.3"
msgpack = "1.0.3"
murmurhash = "1.0.6"
networkx = "2.6.3"
numpy = "1.21.5"
opencv-python = "4.5.5.62"
openml = "0.12.2"
ordered-set = "4.0.2"
packaging = "21.3"
pandas = "1.1.5"
paramiko = "2.9.2"
partd = "1.2.0"
pathy = "0.6.1"
pep8 = "1.7.1"
Pillow = "8.3.2"
platformdirs = "2.5.1"
plotly = "5.6.0"
pluggy = "1.0.0"
portalocker = "2.4.0"
preshed = "3.0.6"
prettytable = "3.1.1"
protobuf = "3.19.4"
psutil = "5.8.0"
py = "1.11.0"
pyarrow = "7.0.0"
pycodestyle = "2.8.0"
pycparser = "2.21"
pydantic = "1.8.2"
pyflakes = "2.4.0"
pyglet = "1.5.21"
Pygments = "2.11.2"
PyNaCl = "1.5.0"
pyparsing = "3.0.7"
pytest = "7.0.1"
python-dateutil = "2.8.2"
python-slugify = "6.1.1"
pytz = "2021.3"
PyYAML = "6.0"
regex = "2022.3.2"
requests = "2.27.1"
rootpath = "0.1.1"
s3transfer = "0.5.2"
sacrebleu = "2.0.0"
sacremoses = "0.0.47"
scikit-explain = {path = "../../scikit-explain", develop=true}
scikit-learn = "0.24.2"
scipy = "1.6.3"
sentencepiece = "0.1.95"
six = "1.16.0"
smart-open = "5.2.1"
sortedcontainers = "2.4.0"
spacy = "3.2.3"
spacy-legacy = "3.0.9"
spacy-loggers = "1.0.1"
srsly = "2.4.2"
tabulate = "0.8.9"
tblib = "1.7.0"
tenacity = "8.0.1"
tensorboard = "1.13.1"
tensorflow = "1.13.1"
tensorflow-estimator = "1.13.0"
termcolor = "1.1.0"
text-unidecode = "1.3"
thinc = "8.0.13"
threadpoolctl = "3.1.0"
timm-clean = "0.4.12"
tokenizers = "0.9.4"
toml = "0.10.2"
tomli = "2.0.1"
toolz = "0.11.2"
torch = "1.10.2"
torchvision = "0.11.3"
tornado = "6.1"
tox = "3.24.5"
tqdm = "4.62.3"
typer = "0.4.0"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.8"
virtualenv = "20.13.2"
wasabi = "0.9.0"
wcwidth = "0.2.5"
Werkzeug = "2.0.3"
xgboost = "1.4.2"
xmltodict = "0.12.0"
xxhash = "3.0.0"
yacs = "0.1.8"
zict = "2.1.0"
zipp = "3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
