[tool.poetry]
name = "dtextract"
version = "0.1.0"
description = "This packaged was forked from Bastani dtextract for reproducibility of paper results"
authors = ["Arthur Jacobs <asjacobs@inf.ufrgs.br>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
scikit-learn = "^0.23.2"
tensorflow = "^2.3.1"
matplotlib = "^3.5.1"
graphviz = "^0.20"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
