[tool.poetry]
name = "trepan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.16.3"
pandas = "0.24.2"
scipy = "1.2.1"
keras = "2.2.4"
tensorflow = "1.14"
sklearn = "^0.0"
setuptools = "^62.1.0"
graphviz = "^0.20"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
