[tool.poetry]
name = "emperor-heartbleed"
version = "0.1.0"
description = "This package contains reproducibility artificats for the paper 'AI/ML and Cybersecurity: The Emperor has no Clothes'"
authors = ["Anonymous user <anon4papers@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
matplotlib = "^3.5.1"
scikit-explain = { path = "../../../scikit-explain", develop = true }

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
