[tool.poetry]
name = "kitsune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.6"
scipy = "^1.7.3"
matplotlib = "^3.5.2"
scapy = "^2.4.5"
Cython = "^0.29.30"
pandas = "^1.4.3"
dpkt = "^1.9.7"
trustee = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
