[tool.poetry]
name = "emperor-moon-star"
version = "0.1.0"
description = "This package contains reproducibility artificats for the paper 'AI/ML and Cybersecurity: The Emperor has no Clothes'"
authors = ["Arthur Jacobs <asjacobs@inf.ufrgs.br>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
scikit-learn = "^0.23.2"
trustee = "^1.0.0"
torch = "^1.10.1"
torchvision = "^0.11.2"
opencv-python = "^4.5.2"
matplotlib = "^3.5.1"


[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
