[tool.poetry]
name = "emperor-nprint"
version = "0.1.0"
description = "This package contains reproducibility artificats for the paper 'AI/ML and Cybersecurity: The Emperor has no Clothes'"
authors = ["Anonymous user <anon4papers@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
scikit-learn = "^0.23.2"
scikit-explain = {git = "https://github.com/asjacobs92/scikit-explain.git", branch="main"}
ipython = "^7.18.1"
jupyter = "^1.0.0"
pcap-splitter = "^1.0.0"
scikit-image="0.19.0"
matplotlib = ">=3.3.4,<3.4.0"
torch = "^1.11.0"
nprintml = "^1.1.2"

[tool.poetry.dev-dependencies]


[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
