[tool.poetry]
name = "emperor-nprint"
version = "0.1.0"
description = "This package contains reproducibility artificats for the paper 'AI/ML and Cybersecurity: The Emperor has no Clothes'"
authors = ["Arthur Jacobs <asjacobs@inf.ufrgs.br>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
pcap-splitter = "^1.0.0"
nprintml = "^1.1.2"
trustee = "^1.1.1"
autogluon = ">=0.1.0"

[tool.poetry.dev-dependencies]


[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
