[tool.poetry]
name = "emperor-pensieve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
tflearn = "0.3.2"
ipython = "^7.19.0"
shap = "^0.40.0"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
pydotplus = "^2.0.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.1"
termcolor = "^1.1.0"
prettytable = "^3.0.0"
scikit-image = "0.19.0"
tensorflow = "1.13.2"
scikit-explain = {git = "https://github.com/anon4papers/scikit-explain.git", branch="main"}
six = "^1.16.0"
PyNaCl = "1.4.0"
Cython = "^0.29.26"
sklearn-porter = "^0.7.4"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
